@@ -3797,6 +3797,29 @@ of the Gremlin traversal machine's compiler. There are 5 categories of strategie
 
 NOTE: The <<explain-step,`explain()`>>-step shows the user how each registered strategy mutates the traversal.
 
+TinkerPop ships with a generous number of `TraversalStrategy` definitions, some of which are applied under the hood
+and some of which can be applied explicitly by the user. Users can add `TraversalStrategy` definitions for particular
+needs. The following sections detail how traversal strategies are applied and defined and describe a collection of
+traversal strategies that are generally useful to end-users.
+
+=== Application
+A traversal can add or remove `TraversalStrategy` strategies with the `withStrategies()` and `withoutStrategies()`
+<<start-steps, start steps>>, see the <<readonlystrategy, ReadOnlyStrategy>> and the <<barrier-step, barrier() step>>
+as examples. One should keep the following in mind when modifiying a traversal's list of `TraversalStrategy` strategies:
+
+* A `TraversalStrategy` added to the traversal can be removed again later on. An example is the
+`conf/gremlin-server-modern-readonly.yaml` file from the Gremlin Server distribution, which applies the `ReadOnlyStrategy`
+to the `GraphTraversalSource` that remote clients can connect to. However, a remote client can remove it on its turn
+by applying the `withoutStrategies()` step with the `ReadOnlyStrategy`.
+
+* The traversal strategies assume that they are only applied once: no exception is raised or warning is logged when you
+try it nevertheless. As a result, the behavior in case of multiple application is unspecified. For some, like the
+<<partitionstrategy, PartitionStrategy>> the first instance (currently) prevails. For others, like the
+<<subgraphstrategy, SubgraphStrategy>>, the last instance (currently) prevails. The `OptionStrategy`
+that is applied as a result of the `with()` steps is an exception in that it actually merges the parameters of
+multiple `with()` steps.
+
+=== Definition
 A simple `OptimizationStrategy` is the `IdentityRemovalStrategy`.
 
 [source,java]
@@ -3938,9 +3961,6 @@ g.V().hasLabel('person'). <1>
 <8> `PathRetractionStrategy` will remove paths from the traversers and increase the likelihood of bulking as path data is not required after `select('b')`.
 <9> `AdjacentToIncidentStrategy` will turn `out()` into `outE()` to increase data access locality.
 
-A collection of useful `DecorationStrategy` strategies are provided with TinkerPop and are generally useful to
-end-users.  The following sub-sections detail these strategies:
-
 === ElementIdStrategy
 
 `ElementIdStrategy` provides control over element identifiers. Some Graph implementations, such as TinkerGraph,
@@ -4029,6 +4049,7 @@ new transaction immediately following the `commit()` that raises the events. The
 may also not behave as "snapshots" at the time of their creation as they are "live" references to actual database
 elements.
 
+[[partitionstrategy]]
 === PartitionStrategy
 
 image::partition-graph.png[width=325]
@@ -4123,6 +4144,7 @@ guarantee iteration order, then it is possible that the final result of the trav
 non-deterministic. In these cases, it would be necessary to enforce a deterministic iteration with `order()` prior to
 these steps that make use of randomness to return results.
 
+[[subraphstrategy]]
 === SubgraphStrategy
 
 `SubgraphStrategy` is similar to `PartitionStrategy` in that it constrains a `Traversal` to certain vertices, edges,
@@ -4166,6 +4188,24 @@ g.V().outE().inV().
     by().
     by('name')
 ----
+
+=== VertexProgramDenyStrategy
+
+Like the `ReadOnlyStrategy`, the `VertexProgramDenyStrategy` denies the execution of specific traversals. A `Traversal`
+that has the `VertexProgramDenyStrategy` applied will throw an `IllegalStateException` if it uses the
+`withComputer()` step. This `TraversalStrategy` can be useful for configuring `GraphTraversalSource` instances in
+Gremlin Server with the `ScriptFileGremlinPlugin`.
+
+[source,text]
+----
+gremlin> oltpOnly = g.withStrategies(VertexProgramDenyStrategy.instance())
+==>graphtraversalsource[tinkergraph[vertices:5 edges:7], standard]
+gremlin> oltpOnly.withComputer().V().elementMap()
+The TraversalSource does not allow the use of a GraphComputer
+Type ':help' or ':h' for help.
+Display stack trace? [yN]
+----
+
 
 [[dsl]]
 == Domain Specific Languages
