@@ -65,9 +65,10 @@ This release also includes changes from <<release-3-4-3, 3.4.3>>.
 * Added kerberos authentication to Gremlin-Python.
 * Added audit logging to bytecode-based traversals.
 * Changed `TraversalStrategy` application methodology to apply each strategy in turn to each level of the traversal hierarchy starting from root down to children.
+* Added a VertexProgramRestrictionStrategy.
 * Prevented more than one `Client` from connecting to the same Gremlin Server session.
 * Changed the Groovy dependency in `gremlin-driver` to a `provided` scope.
-* Adds support for configuring an `Authorizer` implementation to Gremlin Server, allowing for authorization of individual gremlin requests.
+* Added support for configuring an `Authorizer` implementation to Gremlin Server, allowing for authorization of individual gremlin requests.
 * Removed internal functionality for the session close message in Gremlin Server - the message is accepted but ignored if sent.
 * Removed `Property.Exceptions.propertyValueCanNotBeNull` exception type as `null` now has meaning in Gremlin.
 * Removed the "experimental" support for multi/meta-properties in Neo4j.
